# gear-msg-passing

./: .gitignore  Cargo.toml  README.md
goods/: Cargo.toml  build.rs
goods/io/: Cargo.toml
goods/io/src/: lib.rs
goods/services/: Cargo.toml
goods/services/src/: lib.rs
goods/src/: lib.rs
store/: Cargo.toml  build.rs
store/io/: Cargo.toml
store/io/src/: lib.rs
store/services/: Cargo.toml
store/services/src/: lib.rs
store/src/: lib.rs
