[package]
name = "store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
gmeta.workspace = true
store-io.workspace = true
store-services.workspace = true

[dev-dependencies]
store-io.workspace = true
store-services.workspace = true

[build-dependencies]
store-io.workspace = true
gear-wasm-builder.workspace = true
store-services.workspace = true