[package]
name = "store-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true


[dependencies]
gstd.workspace = true
gmeta.workspace = true
store-io.workspace = true
goods-io.workspace = true


[dev-dependencies]
store-io.workspace = true
goods-io.workspace = true


[build-dependencies]
gear-wasm-builder.workspace = true
store-io.workspace = true
goods-io.workspace = true
